added constructor to classes for avoid deprecated warnings

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "phpwhois/phpwhois": "dev-master"
     },
     "suggest": {
         "lib-openssl": "*"
