--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "phpwhois/phpwhois": "dev-master"
+        "php": ">=5.3.0"
     },
     "suggest": {
         "lib-openssl": "*"
